--- a/_config.yml
+++ b/_config.yml
@@ -101,5 +101,8 @@ theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
+
 deploy:
-  type: ''
+  type: git
+  repo: git@github.com:zsShya/zsShya.github.io.git
+  branch: main
